--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "Gruntfile.js",
+    "CHANGELOG.md"
   ],
   "dependencies": {
     "angular": "~1.x"
